Adds detection for Samsung Galaxy F22

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14724,7 +14724,6 @@ Soundmax:
 
 # Samsung
 Samsung:
-
   regex: 'SAMSUNG(?! ?Browser)|lineage_j5y17lte|Maple (?!III)|SC-(?:01[FGHKLM]|02[CGHJKLM]|03[JKLE]|04[EFJL]|05[GL]|(?:4[12]|5[1-4])A|5[1-5]B)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|40[34]SC|SC(?:V3[1-9]|V4[0-9]|51Aa|T21|G0[1-9]|G1[012]|L2[234])(?:-[uj])?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
@@ -15607,6 +15606,8 @@ Samsung:
       model: 'Galaxy A90 5G'
     - regex: '(?:SAMSUNG-)?SM-F127G(?:[);/ ]|$)'
       model: 'Galaxy F12'
+    - regex: '(?:SAMSUNG-)?SM-E225F(?:[);/ ]|$)'
+      model: 'Galaxy F22'
     - regex: '(?:SAMSUNG-)?SM-F415F(?:[);/ ]|$)'
       model: 'Galaxy F41'
     - regex: '(?:SAMSUNG-)?SM-E625'
