--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24665,10 +24665,10 @@ VC:
 
 # CellAllure (cellallure.com)
 CellAllure:
-  regex: '(?:Cool_Extreme_2|Earn|Fashion2Plus|Fashion[ _]C|Cool Duo|CHIC_X1|Miracle XS)(?:[);/ ]|$)'
+  regex: '(?:Cool_Extreme_2|Earn|Fashion2Plus|Fashion[ _]C|Cool Duo|CHIC_X1|Miracle XS|Miracle 6.0 S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(Cool_Extreme_2|Earn|Fashion[ _]C|Cool Duo|Miracle XS)(?:[);/ ]|$)'
+    - regex: '(Cool_Extreme_2|Earn|Fashion[ _]C|Cool Duo|Miracle XS|Miracle 6.0 S)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Fashion2Plus'
       model: 'Fashion 2 Plus'
