feat(device) detect brand Archos: 101c Copper feat(device) detect brand Leagoo: Alfa 2, Alfa 5 feat(device) detect brand Elephone: Trunk
feat(device) added test for brand Archos: 70c Xenon, 101b Xenon v2
feat(device) added test for brand Samsung: Galaxy J2 (SM-J200H), Galaxy J1 (2016) (SM-J120M, SM-J120F),
 Galaxy J1 Ace (SM-J111M, SM-J110M)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2443,7 +2443,7 @@ Archos:
     - regex: '(?:YL-)?Archos ([^/;]*(?:PAD)[^/;]*) Build'
       device: 'tablet'
       model: '$1'
-    - regex: 'Archos ((?:[789]|10)[0-9]?[a-z]* ?(?:G9|G10|Helium|Titanium|Cobalt|Platinum|Xenon|Carbon|Neon|XS|IT)[^/);]*)(?: Build|[;)])'
+    - regex: 'Archos ((?:[789]|10)[0-9]?[a-z]* ?(?:G9|G10|Helium|Titanium|Copper|Cobalt|Platinum|Xenon|Carbon|Neon|XS|IT)[^/);]*)(?: Build|[;)])'
       device: 'tablet'
       model: '$1'
     - regex: '(?:YL-)?Archos ([^/);]+)(?: Build|[;)])'
@@ -5725,10 +5725,10 @@ Eks Mobility:
 
 # Elephone
 Elephone:
-  regex: 'Elephone|Vowney(?: Lite)?|P6000(?!_Plus)( ?Pro| ?Plus|\+| ?02| 5.0 01)?|Soldier|(?:P8_3D|P8_Max|A6_mini|Android 9.+ PX|PX_Pro)(?:[);/ ]|$)'
+  regex: 'Elephone|Vowney(?: Lite)?|P6000(?!_Plus)( ?Pro| ?Plus|\+| ?02| 5.0 01)?|Soldier|(?:Trunk 1|P8_3D|P8_Max|A6_mini|Android 9.+ PX|PX_Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Elephone Trunk(?:[);/ ]|$)'
+    - regex: '(?:Elephone[_ ])?Trunk(?: 1)?(?:[);/ ]|$)'
       model: 'Trunk'
     - regex: 'Vowney Lite(?:[);/ ]|$)'
       model: 'Vowney Lite'
@@ -10154,7 +10154,7 @@ LCT:
 
 # Leagoo
 Leagoo:
-  regex: '(?:MY)?LEAGOO[ _-]?|(?:XRover(?: C)?|Shark 5000|M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _](?:X|7s)|Alfa 1|Elite [15]|Venture 1|Z10-E|M9 Pro|Power 5|Power[ _]2(?: Pro)?|Android 9.+ M1[23])(?:[);/ ]|$)'
+  regex: '(?:MY)?LEAGOO[ _-]?|(?:XRover(?: C)?|Shark 5000|M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _](?:X|7s)|Alfa [125]|Elite [15]|Venture 1|Z10-E|M9 Pro|Power 5|Power[ _]2(?: Pro)?|Android 9.+ M1[23])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:LEAGOO[- _])?M([89])[_-]?Pro(?:[);/ ]|$)'
@@ -10179,8 +10179,8 @@ Leagoo:
       model: 'Power $1'
     - regex: 'Venture 1(?:[);/ ]|$)'
       model: 'Venture 1'
-    - regex: 'Alfa 1(?:[);/ ]|$)'
-      model: 'Alfa 1'
+    - regex: 'Alfa ([125])(?:[);/ ]|$)'
+      model: 'Alfa $1'
     - regex: 'XRover( C)?(?:[);/ ]|$)'
       model: 'XRover$1'
     - regex: '(?:LEAGOO[- _])?(Z10-E|M6|M1[23])(?:[);/ ]|$)'
