Adds detection for Remdun brand and Remdun RD86E

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25620,6 +25620,14 @@ RoyQueen:
       device: 'tablet'
       model: '$1'
 
+# Remdun (https://www.remdun.com/)
+Remdun:
+  regex: 'RD86E(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'RD86E(?:[);/ ]|$)'
+      model: 'RD86E'
+
 # Revo or RevoPhone or RevoPad (revophone.com)
 Revo:
   regex: 'Revo[_ ](?:Youplus|555)|RevoYou'
