Adds detection for Majestic Tab 711 4G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11557,7 +11557,7 @@ Mpman:
 
 # Majestic
 Majestic:
-  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|(?:TAB (?:647|411) 3G|URANO 77LTE|PLUTO__?26N?)(?:[);/ ]|$)'
+  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|(?:TAB (?:647|411) 3G|TAB 711 4G|URANO 77LTE|PLUTO__?26N?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'URANO 77LTE(?:[);/ ]|$)'
@@ -11566,6 +11566,9 @@ Majestic:
       model: 'Pluto $1'
     - regex: 'TAB (647|411) 3G'
       model: 'Tab $1 3G'
+      device: 'tablet'
+    - regex: 'TAB 711 4G'
+      model: 'Tab 711 4G'
       device: 'tablet'
     - regex: 'MAJESTIC[ _]Tab([^;/]+)Build'
       model: 'Tab$1'
