Adds detection for Remdun brand and improves detection for Advan, CellAllure, Majestic, Samsung, STF Mobile, TechPad brands (#6943)
* Adds detection for Samsung Galaxy F22
* Adds detection for TechPad M5 Plus
* Adds detection for STF Mobile Joy Pro
* Adds detection for CellAllure Miracle 6.0 S
* Adds detection for Advan 5058, 5062
* Adds detection for Remdun brand and Remdun RD86E
* Adds detection for Majestic Tab 711 4G

issue #5974

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1572,7 +1572,7 @@ Acer:
 
 # Advan
 Advan:
-  regex: '(?:ADVAN (?:M4|S40)|i7U|S45E|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+|S4\+)(?:[);/ ]|$)|[ ](?:50(?:[46]1|59)|600[24])(?: Build|\) AppleWebKit)|(?:E1C_3G)(?:[);/ ]|$)'
+  regex: '(?:ADVAN (?:M4|S40)|i7U|S45E|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+|S4\+)(?:[);/ ]|$)|[ ](?:50(?:[46]1|5[89]|62)|600[24])(?: Build|\) AppleWebKit)|(?:E1C_3G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ADVAN M4'
@@ -1591,7 +1591,7 @@ Advan:
       model: 'G2 Pro'
     - regex: ' 6002(?: Build|\) AppleWebKit)'
       model: 'G3 Pro'
-    - regex: '(S45E|50[46]1|5059|S50H|I7D|S7D|S4Z|S5J\+|S4\+)(?:[);/ ]|$)'
+    - regex: '(S45E|50[46]1|505[89]|5062|S50H|I7D|S7D|S4Z|S5J\+|S4\+)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'E1C_3G'
       device: 'tablet'
@@ -11557,7 +11557,7 @@ Mpman:
 
 # Majestic
 Majestic:
-  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|(?:TAB (?:647|411) 3G|URANO 77LTE|PLUTO__?26N?)(?:[);/ ]|$)'
+  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|(?:TAB (?:647|411) 3G|TAB 711 4G|URANO 77LTE|PLUTO__?26N?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'URANO 77LTE(?:[);/ ]|$)'
@@ -11566,6 +11566,9 @@ Majestic:
       model: 'Pluto $1'
     - regex: 'TAB (647|411) 3G'
       model: 'Tab $1 3G'
+      device: 'tablet'
+    - regex: 'TAB 711 4G'
+      model: 'Tab 711 4G'
       device: 'tablet'
     - regex: 'MAJESTIC[ _]Tab([^;/]+)Build'
       model: 'Tab$1'
@@ -14724,7 +14727,6 @@ Soundmax:
 
 # Samsung
 Samsung:
-
   regex: 'SAMSUNG(?! ?Browser)|lineage_j5y17lte|Maple (?!III)|SC-(?:01[FGHKLM]|02[CGHJKLM]|03[JKLE]|04[EFJL]|05[GL]|(?:4[12]|5[1-4])A|5[1-5]B)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|40[34]SC|SC(?:V3[1-9]|V4[0-9]|51Aa|T21|G0[1-9]|G1[012]|L2[234])(?:-[uj])?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
@@ -15607,6 +15609,8 @@ Samsung:
       model: 'Galaxy A90 5G'
     - regex: '(?:SAMSUNG-)?SM-F127G(?:[);/ ]|$)'
       model: 'Galaxy F12'
+    - regex: '(?:SAMSUNG-)?SM-E225F(?:[);/ ]|$)'
+      model: 'Galaxy F22'
     - regex: '(?:SAMSUNG-)?SM-F415F(?:[);/ ]|$)'
       model: 'Galaxy F41'
     - regex: '(?:SAMSUNG-)?SM-E625'
@@ -16230,7 +16234,7 @@ Smartisan:
 
 # STF Mobile
 STF Mobile:
-  regex: '(?:Fractal|AERIAL PLUS|Origins Pro|BLOCK_MINI|BLOCK GO|BLOCK 3|SLAY II)(?:[);/ ]|$)'
+  regex: '(?:AERIAL PLUS|BLOCK_MINI|BLOCK GO|BLOCK 3|Fractal|Joy Pro|Origins Pro|SLAY II)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Fractal'
@@ -16249,6 +16253,8 @@ STF Mobile:
       model: 'Block Go'
     - regex: 'SLAY II'
       model: 'Slay II'
+    - regex: 'Joy Pro'
+      model: 'Joy Pro'
 
 # STK
 STK:
@@ -17835,7 +17841,7 @@ Tecno Mobile:
 
 # TechPad (techpad.mx)
 TechPad:
-  regex: 'Tech[ _]?pad|XTAB[ _-]|(?:3G_16|Dual C1081HD|S813G|NOTE[_ ]4CAM|M5Go)(?:[);/ ]|$)'
+  regex: 'Tech[ _]?pad|XTAB[ _-]|(?:3G_16|Dual C1081HD|S813G|NOTE[_ ]4CAM|M5(?:Go|Plus))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'S813G'
@@ -17857,9 +17863,9 @@ TechPad:
     - regex: 'XTAB[ _-]([^/;]+) Build'
       model: 'XTAB $1'
     # explicit smartphone models
-    - regex: 'M5Go'
+    - regex: 'M5(Go|Plus)'
       device: 'smartphone'
-      model: 'M5 Go'
+      model: 'M5 $1'
     - regex: 'NOTE 4CAM'
       device: 'smartphone'
       model: 'Note 4 Cam'
@@ -24662,10 +24668,10 @@ VC:
 
 # CellAllure (cellallure.com)
 CellAllure:
-  regex: '(?:Cool_Extreme_2|Earn|Fashion2Plus|Fashion[ _]C|Cool Duo|CHIC_X1|Miracle XS)(?:[);/ ]|$)'
+  regex: '(?:Cool_Extreme_2|Earn|Fashion2Plus|Fashion[ _]C|Cool Duo|CHIC_X1|Miracle XS|Miracle 6.0 S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(Cool_Extreme_2|Earn|Fashion[ _]C|Cool Duo|Miracle XS)(?:[);/ ]|$)'
+    - regex: '(Cool_Extreme_2|Earn|Fashion[ _]C|Cool Duo|Miracle XS|Miracle 6.0 S)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Fashion2Plus'
       model: 'Fashion 2 Plus'
@@ -25616,6 +25622,14 @@ RoyQueen:
     - regex: 'RQ-(713S)'
       device: 'tablet'
       model: '$1'
+
+# Remdun (https://www.remdun.com/)
+Remdun:
+  regex: 'RD86E(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'RD86E(?:[);/ ]|$)'
+      model: 'RD86E'
 
 # Revo or RevoPhone or RevoPad (revophone.com)
 Revo:
